--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -153,7 +153,7 @@ The NANOStars students at F&M are:
 <p>
 
 If you are an F&M student interested in joining the NANOStars program,
-please contact <a href=http://venus.fandm.edu/~fcrawfor>Froney
+please contact <a href=http://froneycrawford.github.io>Froney
 Crawford</a> (fcrawfor&#064;fandm.edu) to discuss.
 
 <p>
