--- a/pks70/index.html
+++ b/pks70/index.html
@@ -159,7 +159,7 @@ Four FRBs were found in the re-analysis of the PKS70 survey. These were publishe
 <a href=https://ui.adsabs.harvard.edu/abs/2022MNRAS.515.3698C>"Four New Fast Radio Bursts Discovered 
 in the Parkes 70-cm Pulsar Survey Archive"</a> by F. Crawford et al.,
 Monthly Notices of the Royal Astronomical Society, 515, 3698 (2022). 
-See also the <a href=http://venus.fandm.edu/~pulsar/frb/>F&M FRB page</a>. 
+See also the <a href=http://froneycrawford.github.io/pulsar/frb/>F&M FRB page</a>. 
 
 <p>
 
