--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -143,7 +143,6 @@ The NANOStars students at F&M are:
 <li> Mckenzie Golden '25 (team leader) 
 <li> Tai Jespersen '26 (team leader)
 <li> Eleanor Craver '27
-<li> Adeon Muyskens '26
 <li> Volkan Turan '27 
 
 <p>
@@ -190,7 +189,7 @@ plan upcoming data analysis tasks.
 
 <ul>
 
-<li> <b>Internal F&M Team Meetings for Fall 2024:</b> 
+<li> <b>Internal F&M Team Meetings for Spring 2025:</b> 
 
 <p>
 
@@ -200,14 +199,14 @@ Fridays 4:30-5:30 p.m. in Hackman 220
 <p>
 
 
-<li> <b>NANOStars Telecons for Fall 2024:</b> 
+<li> <b>NANOStars Telecons for Spring 2025:</b> 
 
 <p>
 
-Fri Sep 27 at 4:30 p.m. ET <br>
-Fri Oct 18 at 4:30 p.m. ET <br>
-Fri Nov 15 at 4:30 p.m. ET <br>
-Fri Dec 6 at 4:30 p.m. ET
+Fri Feb 7 at 4:30 p.m. ET <br>
+Fri Mar 7 at 4:30 p.m. ET <br>
+Fri Mar 28 at 4:30 p.m. ET <br>
+Fri Apr 18 at 4:30 p.m. ET
 
 </ul>
 
@@ -219,18 +218,17 @@ Other events for NANOStars students to attend:
 
 <ul>
 
-<li> <b> <a href=https://nanograv.org/event/fall-2024-meeting>NANOGrav 
-Fall Meeting</a> </b> <br>
-Location: U. of Michigan, Ann Arbor, MI <br>
-Date: Oct 5-6 (Student Workshop) <br>
-Date: Oct 7-9, 2024 (Science Meeting)   
+<li> <b> F&M Spring Research Fair </b> <br>
+Location: Mayser Gymnasium <br>
+Date: TBD <br>
+Time: 12:30-4:30 p.m.        
 
 <p>
 
-<li> <b> F&M Fall Research Fair </b> <br>
-Location: Mayser Gymnasium <br>
-Date: Fri Oct 18, 2024 <br>
-Time: 12:30-4:30 p.m.        
+<li> <b> Duncan Lorimer Research Colloquium </b> <br>
+Location: Hackman 218 <br>
+Date: Thu Apr 10, 2025 <br>
+Time: 4:30 p.m.
 
 
 
@@ -263,8 +261,9 @@ how-count="false">Follow @fandm_pulsars</a>
 
 <img border=1 height=240 src=./arecibo_feb2014_pic1a.jpg>
 
-
 <img border=1 height=240 src=./crop_research_computers_06_dg.jpg>
+
+<img border=1 height=240 src=./madden2.jpg>
 
 <p>
 
