--- a/m31_gbt/sp/index.html
+++ b/m31_gbt/sp/index.html
@@ -4,6 +4,7 @@
 <body>
 <h1>Directory Listing</h1>
 <ul>
+<li><a href="cand_tstart_57322.023344907408_tcand_1833.9400000_dm_278.68800_snr_9.77288.png">cand_tstart_57322.023344907408_tcand_1833.9400000_dm_278.68800_snr_9.77288.png</a></li>
 </ul>
 </body>
 </html>
