--- a/m31_fast/index.html
+++ b/m31_fast/index.html
@@ -62,7 +62,7 @@ funded through NSF grant 1925192.
   * presto perodicity search (zmax 1200, DM_max 2000): <a href=./B0136+57_tracking-M01_20211207_DM86.70_ACCEL_1200_ACCEL_Cand_1.pfd.png>B0136+57 detection (sigma=9546)</a> 
   * presto single pulse search (DM vs time, 20 sec window, DM_max 2000): <a href=./B0136+57_20211207_1000-1020s_singlepulse.png>B0136+57 detection</a> 
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59555.601261574076_tcand_883.0270000_dm_73.27090_snr_505.28500.png>B0136+57 detection</a> (there were 2394 pulses with p > 90%)
-  * riptide FFA search:
+  * riptide FFA search: <a href=./candidate_B0136+57_tracking-M01_20211207_0000.png>B0136+57 detection (4th harmonic, S/N=1430)</a> 
 
   
   <b>Source: PSR B0136+57</b> (P=272.49 ms, DM=73.8)
@@ -79,7 +79,7 @@ funded through NSF grant 1925192.
   * presto perodicity search (zmax 1200, DM_max 2000): <a href=./B0136+57_tracking-M01_20211216_DM75.10_ACCEL_1200_ACCEL_Cand_1.pfd.png>B0136+57 detection (sigma=5630)</a> 
   * presto single pulse search (DM vs time, 20 sec window, DM_max 2000): <a href=./B0136+57_20211216_1000-1020s_singlepulse.png>B0136+57 detection</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59564.570833333331_tcand_493.8600000_dm_73.90740_snr_442.47700.png>B0136+57 detection</a> (there were 3496 pulses with p > 90%)
-  * riptide FFA search:
+  * riptide FFA search: <a href=./candidate_B0136+57_tracking-M01_20211216_trunc_0000.png>B0136+57 detection (4th harmonic, S/N=1307)</a> 
 
 
   <b>Source: M31</b>
