--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -112,7 +112,8 @@ modules)
 
 <ul>
 
-<li> <a href=https://docs.nanosta.rs/>Documentation for Wenky's Candidate Rating Tool</a> from Wenky Xia
+<li> <a href=https://docs.nanosta.rs/>Documentation for Wenky's
+Candidate Rating Tool</a> from Wenky Xia
 
 <li> <a href=./PSC_search_guide.pdf>Searching for and Identifying
 Pulsars</a> (a pulsar search tutorial for new students)
@@ -142,9 +143,17 @@ The NANOStars students at F&M are:
 <li> Delaney Adair '25 (team leader)  
 <li> Mckenzie Golden '25 (team leader) 
 <li> Tai Jespersen '26 (team leader)
+<li> Eric Baldwin '25
+<li> Liyan Chen '28
 <li> Eleanor Craver '27
-<li> Volkan Turan '27 
+<li> Maddie McMullen '28
+<li> Sayf Mullick '28
+<li> Jay Oakes '28
+<li> Jacob Ripperger '28
+<li> Haunah Thomas '27
+<li> Volkan Turan '27
 
+  
 <p>
 
 </ul>
