--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -234,6 +234,13 @@ Time: 12:30-4:30 p.m.
 
 <p>
 
+<li> <b> 41st Annual CPC Astronomers Meeting </b> <br> 
+Location: Dickinsion College <br> 
+Date: Sat Apr 5, 2025 <br>
+Time: 9:00 a.m. to 4:00 p.m.
+
+<p>
+
 <li> <b> Duncan Lorimer Research Colloquium </b> <br>
 Location: Hackman 218 <br>
 Date: Thu Apr 10, 2025 <br>
