--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -179,7 +179,7 @@ The NANOStars program uses data from the following radio telescopes:
 <li> <a href=https://greenbankobservatory.org/science/telescopes/gbt/>The Green
 Bank 100-m Telescope (GBT)</a>
 
-  <li> <a href=https://www.csiro.au/en/about/facilities-collections/atnf/parkes-radio-telescope>The Parkes 64-m Radio Telescope</a>
+  <li> <a href=https://www.parkes.atnf.csiro.au/>The Parkes 64-m Radio Telescope</a>
 </ul>
 
 
