--- a/m31_fast/index.html
+++ b/m31_fast/index.html
@@ -96,7 +96,7 @@ funded through NSF grant 1925192.
   * presto chunk processing (zmax 1200, DM_max 2000, prep sigma above 6, min chunk of 600 s): <b>no candidates</b> 
   * presto single pulse search (plots in 900 sec windows, DM_max 2000): <a href=./presto_sp_m31_20211207/>no good candidates above S/N 6.0</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59555.503472222219_tcand_3256.9800000_dm_69.57690_snr_7.15192.png>1 candidate above S/N 7.0 (DM=70, S/N=7.2, p=0.99977976)</a>
-  * riptide FFA search (1 to 30 sec):  
+  * riptide FFA search (1 to 30 sec): <b>no convincing candidates above S/N 7.0</b> 
 
 
   <b>Source: M31</b> 
@@ -113,7 +113,7 @@ funded through NSF grant 1925192.
   * presto chunk processing (zmax 1200, DM_max 2000, prep sigma above 6, min chunk of 600 s): <b>no candidates</b>
   * presto single pulse search (plots in 900 sec windows, DM_max 2000): <a href=./presto_sp_m31_20211216/>no good candidates above S/N 6.0</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <b>no candidates above S/N 7.0</b>
-  * riptide FFA search (1 to 30 sec):  
+  * riptide FFA search (1 to 30 sec): <b>no convincing candidates above S/N 7.0</b>  
 
 </pre> 
 
