--- a/frb/index.html
+++ b/frb/index.html
@@ -129,10 +129,10 @@ You can see the <a href=https://ui.adsabs.harvard.edu/abs/2022TNSFR2269....1C>Tr
 <p>
 
 <ul>
-FRB 910730: <a href=./frb1.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/19910730A>TNS Discovery Report</a>) <br>
-FRB 920428: <a href=./frb2.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/19920428A>TNS Discovery Report</a>) <br>
-FRB 920913: <a href=./frb3.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/19920913A>TNS Discovery Report</a>) <br>
-FRB 921212: <a href=./frb4.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/19921212A>TNS Discovery Report</a>)
+FRB 910730: <a href=./frb1.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/frb19910730a>TNS Discovery Report</a>) <br>
+FRB 920428: <a href=./frb2.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/frb19920428a>TNS Discovery Report</a>) <br>
+FRB 920913: <a href=./frb3.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/frb19920913a>TNS Discovery Report</a>) <br>
+FRB 921212: <a href=./frb4.png>dedispersed waterfall plot</a> (<a href=https://www.wis-tns.org/object/frb19921212a>TNS Discovery Report</a>)
 </ul>
 
 <p> 
