--- a/j0537/index.html
+++ b/j0537/index.html
@@ -79,10 +79,16 @@ J0537-6910 from 2017 (Project P942) revealed a signal with DM 823 and
 S/N of 9.0. This complements two of the pulses detected in the set of
 49 in the original file which had DMs of 810 (S/N 8.5) and 839 (S/N
 7.3). A comparison of the three signals can be seen in
-<a href=./dm800_plots/>these plots</a>. All three are weak but have
-reasonable (and consistent) morphologies. Could these signals be from
-a neuttron star at DM of around 800 in the LMC (embedded deep in
-plasma)? Could they be from PSR J0537-6910 itself?
+<a href=./dm800_plots/>these plots</a>.
+
+<p>
+
+All three pulses are weak but have reasonable (and consistent)
+morphologies. All three have consistent widths (512 bins,
+corresponding to 30-40 ms in each case). However, these widths are
+much larger than the 16 ms spin period of PSR J0537-6910 (so, they are
+probably not from this pulsar). Could these signals be from a neutron
+star at DM of around 800 in the LMC (embedded deep in plasma)?
 
 
 <p>
