--- a/smc_bpsr/index.html
+++ b/smc_bpsr/index.html
@@ -38,6 +38,9 @@ A search of SMC beams taken with the BPSR backend at Parkes. Searches for both p
 
 <p>
 
+
+<a href=./positions.txt>Beam Positions</a> <br>
+
 <a href=https://docs.google.com/spreadsheets/d/1yWPriKmwu4BMgbCiH3GBLkvErXHrYe4kLSSOihr4ce8/edit?usp=sharing>Periodicity Analysis Spreadsheet</a> <br>
 
 <a href=./cand_maybe/>Periodicity Candidate Plots</a> (Max DM of 5000, with zmax 1200) <br>
