--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -140,18 +140,18 @@ The NANOStars students at F&M are:
 
 <ul>
 
-<li> Delaney Adair '25 (team leader)  
-<li> Mckenzie Golden '25 (team leader) 
 <li> Tai Jespersen '26 (team leader)
-<li> Eric Baldwin '25
+<li> Adeon Muyskens '26 (team leader)
+<li> Haunah Thomas '27 (team leader)
+<li> Volkan Turan '27 (team leader)
 <li> Liyan Chen '28
 <li> Eleanor Craver '27
 <li> Maddie McMullen '28
 <li> Sayf Mullick '28
 <li> Jay Oakes '28
 <li> Jacob Ripperger '28
-<li> Haunah Thomas '27
-<li> Volkan Turan '27
+
+
 
   
 <p>
@@ -212,40 +212,11 @@ Fridays 4:30-5:30 p.m. in Hackman 220
 
 <p>
 
-Fri Feb 7 at 4:30 p.m. ET <br>
-Fri Feb 28 at 4:30 p.m. ET <br>
-Fri Mar 28 at 4:30 p.m. ET <br>
-Fri Apr 11 at 4:30 p.m. ET
+TBD TBD  at TBD p.m. ET <br>
 
 </ul>
 
 <p>
-
-Other events for NANOStars students to attend:
-
-<p>
-
-<ul>
-
-<li> <b> F&M Spring Research Fair </b> <br>
-Location: Mayser Gymnasium <br>
-Date: TBD <br>
-Time: 12:30-4:30 p.m.        
-
-<p>
-
-<li> <b> 41st Annual CPC Astronomers Meeting </b> <br> 
-Location: Dickinsion College <br> 
-Date: Sat Apr 5, 2025 <br>
-Time: 9:00 a.m. to 4:00 p.m.
-
-<p>
-
-<li> <b> Duncan Lorimer Research Colloquium </b> <br>
-Location: Hackman 218 <br>
-Date: Thu Apr 10, 2025 <br>
-Time: 4:30 p.m.
-
 
 
 </ul>
