--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -90,11 +90,11 @@ Program Description</a> (for new prospective students)
 access only; read this to understand the steps required to participate in the program during the semester)
 
 <li> <a href=https://about.citiprogram.org/>CITI Online RCR Training
-Registration and Training</a> (select "Log In"  in the upper right corner of the screen; 
-select "Log in Through My Organization"; type "Franklin & Marshall College" into 
-the box that appears; select the "Continue to SSO Login/Instructions"; 
-select the category Physical Science; once this is done you can complete the RCR
-modules)
+Registration and Training</a> (select "Log In" in the upper right
+corner of the screen; select "Log in Through My Organization"; type
+"Franklin & Marshall College" into the box that appears; select the
+"Continue to SSO Login/Instructions"; select the category Physical
+Science; once this is done you can complete the RCR modules)
 
 <li>
 <a href=http://pulsars.nanosta.rs/>Wenky's Candidate Rating Tool</a>
@@ -144,13 +144,10 @@ The NANOStars students at F&M are:
 <li> Adeon Muyskens '26 (team leader)
 <li> Haunah Thomas '27 (team leader)
 <li> Volkan Turan '27 (team leader)
-<li> Liyan Chen '28
 <li> Eleanor Craver '27
+<li> Wesley Keating '28
 <li> Maddie McMullen '28
 <li> Sayf Mullick '28
-<li> Jay Oakes '28
-<li> Jacob Ripperger '28
-
 
 
   
@@ -198,7 +195,7 @@ plan upcoming data analysis tasks.
 
 <ul>
 
-<li> <b>Internal F&M Team Meetings for Spring 2025:</b> 
+<li> <b>Internal F&M Team Meetings for Fall 2025:</b> 
 
 <p>
 
@@ -208,11 +205,14 @@ Fridays 4:30-5:30 p.m. in Hackman 220
 <p>
 
 
-<li> <b>NANOStars Telecons for Spring 2025:</b> 
+<li> <b>NANOStars Telecons for Fall 2025:</b> 
 
 <p>
 
-TBD TBD  at TBD p.m. ET <br>
+Fri Sep 26 at 4:30 p.m. ET <br>
+Fri Oct 17 at 4:30 p.m. ET <br>
+Fri Nov 14 at 4:30 p.m. ET <br>
+Fri Dec 5  at 4:30 p.m. ET
 
 </ul>
 
