--- a/m31_fast/index.html
+++ b/m31_fast/index.html
@@ -62,6 +62,7 @@ funded through NSF grant 1925192.
   * presto perodicity search (zmax 1200, DM_max 2000): <a href=./B0136+57_tracking-M01_20211207_DM86.70_ACCEL_1200_ACCEL_Cand_1.pfd.png>B0136+57 detection (sigma=9546)</a> 
   * presto single pulse search (DM vs time, 20 sec window, DM_max 2000): <a href=./B0136+57_20211207_1000-1020s_singlepulse.png>B0136+57 detection</a> 
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59555.601261574076_tcand_883.0270000_dm_73.27090_snr_505.28500.png>B0136+57 detection</a> (there were 2394 pulses with p > 90%)
+  * heimdall/fetch long single pulse search (decimate -t 512, max boxcar = 512, DM_max 10000): <b>no candidates</b>
   * riptide FFA search (1 to 30 sec): <a href=./candidate_B0136+57_tracking-M01_20211207_0000.png>B0136+57 detection (4th harmonic, S/N=1430)</a> 
 
   
@@ -79,6 +80,7 @@ funded through NSF grant 1925192.
   * presto perodicity search (zmax 1200, DM_max 2000): <a href=./B0136+57_tracking-M01_20211216_DM75.10_ACCEL_1200_ACCEL_Cand_1.pfd.png>B0136+57 detection (sigma=5630)</a> 
   * presto single pulse search (DM vs time, 20 sec window, DM_max 2000): <a href=./B0136+57_20211216_1000-1020s_singlepulse.png>B0136+57 detection</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59564.570833333331_tcand_493.8600000_dm_73.90740_snr_442.47700.png>B0136+57 detection</a> (there were 3496 pulses with p > 90%)
+  * heimdall/fetch long single pulse search (decimate -t 512, max boxcar = 512, DM_max 10000): <b>no candidates</b>
   * riptide FFA search (1 to 30 sec): <a href=./candidate_B0136+57_tracking-M01_20211216_trunc_0000.png>B0136+57 detection (4th harmonic, S/N=1307)</a> 
 
 
@@ -96,6 +98,7 @@ funded through NSF grant 1925192.
   * presto chunk processing (zmax 1200, DM_max 2000, prep sigma above 6, min chunk of 600 s): <b>no candidates</b> 
   * presto single pulse search (plots in 900 sec windows, DM_max 2000): <a href=./presto_sp_m31_20211207/>no good candidates above S/N 6.0</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <a href=./cand_tstart_59555.503472222219_tcand_3256.9800000_dm_69.57690_snr_7.15192.png>1 candidate above S/N 7.0 (DM=70, S/N=7.2, p=0.99977976)</a>
+  * heimdall/fetch long single pulse search (decimate -t 512, max boxcar = 512, DM_max 10000): <b>no candidates</b>
   * riptide FFA search (1 to 30 sec): <b>no convincing candidates above S/N 7.0</b> 
 
 
@@ -113,6 +116,7 @@ funded through NSF grant 1925192.
   * presto chunk processing (zmax 1200, DM_max 2000, prep sigma above 6, min chunk of 600 s): <b>no candidates</b>
   * presto single pulse search (plots in 900 sec windows, DM_max 2000): <a href=./presto_sp_m31_20211216/>no good candidates above S/N 6.0</a>
   * heimdall/fetch single pulse search (max boxcar 512, DM_max 10000): <b>no candidates above S/N 7.0</b>
+  * heimdall/fetch long single pulse search (decimate -t 512, max boxcar = 512, DM_max 10000): <b>no candidates</b>
   * riptide FFA search (1 to 30 sec): <b>no convincing candidates above S/N 7.0</b>  
 
 </pre> 
