--- a/pks70/index.html
+++ b/pks70/index.html
@@ -10,12 +10,12 @@
 
 <p>
 
-We are re-analyzing archival data from the Parkes radio telescope to
-hunt for previously missed pulsars and fast radio bursts. The
-archival data is from a 70-cm survey (called PKS70) that was conducted
-at Parkes in the 1990's which covered much of the southern sky. This
-data was processed at the time it was taken, and a large number of
-pulsars were discovered and published.
+We have re-analyzed archival data from the Parkes radio telescope to
+hunt for previously missed pulsars and fast radio bursts. The archival
+data is from a 70-cm survey (called PKS70) that was conducted at
+Parkes in the 1990's which covered much of the southern sky. This data
+was processed at the time it was taken, and a large number of pulsars
+were discovered and published.
 
 <p>
 
@@ -53,7 +53,7 @@ plots identified by FETCH as likely real to look for new signatures
 from burst sources.
 
 <p>
-
+  
 <li>
 <a href=http://pulsars.nanosta.rs/>Wenky's PKS70 Survey PRESTO Re-Analysis Candidate Rating Tool</a>
 
@@ -96,7 +96,16 @@ Astronomical Society, 297, 28 (1998)
 
 <h2> Results </h2>
 
-<font size=2> 
+<font size=2>
+The results of this analysis were published in "Reprocessing of the
+Parkes 70 cm Survey and Discovery of a New Radio Pulsar in the Large
+Magellanic Cloud" by W. Xia et al., Astrophysical Journal, 991, 6
+(2025). Some unconfirmed candidates remain, which are listed in the
+table below.
+
+<p>
+<p>
+
 <a href=./discoveries_table.html>Link to a formatted table of new discoveries 
 from this analysis</a> (used by the pulsar scraper)</font>
 
