--- a/pks70/index.html
+++ b/pks70/index.html
@@ -97,9 +97,9 @@ Astronomical Society, 297, 28 (1998)
 <h2> Results </h2>
 
 <font size=2>
-The results of this analysis were published in "Reprocessing of the
+The results of this analysis were published in <a href=https://ui.adsabs.harvard.edu/abs/2025ApJ...991....6X>"Reprocessing of the
 Parkes 70 cm Survey and Discovery of a New Radio Pulsar in the Large
-Magellanic Cloud" by W. Xia et al., Astrophysical Journal, 991, 6
+Magellanic Cloud"</a> by W. Xia et al., Astrophysical Journal, 991, 6
 (2025). Some unconfirmed candidates remain, which are listed in the
 table below.
 
