--- a/nvss/index.html
+++ b/nvss/index.html
@@ -62,6 +62,15 @@ Telescope Display/Status</a> (mitll,43m-mit) <br>
 
 <p>
 
+
+<li>
+<a href=https://ui.adsabs.harvard.edu/abs/2025RNAAS...9..286C>"A Fast 
+Folding Algorithm Search for Long-period Pulsars in Unidentified 
+Bright Radio Sources"</a> by F. Crawford and H. Xu,
+Research Notes of the American Astronomical Society, 9, 286 (2025) 
+
+<p>
+
 <li>
 <a href=https://ui.adsabs.harvard.edu/abs/2021RNAAS...5...21C>"Reprocessing
 of a Green Bank 43 m Telescope Survey of Unidentified Bright Radio
