--- a/nvss/index.html
+++ b/nvss/index.html
@@ -66,7 +66,7 @@ Telescope Display/Status</a> (mitll,43m-mit) <br>
 <li>
 <a href=https://ui.adsabs.harvard.edu/abs/2025RNAAS...9..286C>"A Fast 
 Folding Algorithm Search for Long-period Pulsars in Unidentified 
-Bright Radio Sources"</a> by F. Crawford and H. Xu,
+Bright Radio Sources"</a> by F. Crawford and K. Banerjee,
 Research Notes of the American Astronomical Society, 9, 286 (2025) 
 
 <p>
