--- a/m31_fast/index.html
+++ b/m31_fast/index.html
@@ -6,20 +6,13 @@
 
 <p>
 
-We are searching the bulge of the Andromeda Galaxy (M31) with the
+We are searching the bulge of the Andromeda Galaxy (M31) for radio
+pulsars and fast transients with the
 <a href=https://fast.bao.ac.cn/>Five-hundred-meter Aperture Spherical
-Telescope (FAST)</a>.  HEINDALL and FETCH are used to search for
-single pulses and bursts.  PRESTO is used for the periodicity search.
-
-<p>
-
-The maximum expected Galactic contribution to the DM along the M31
-line of sight is 68 (NE2001 model) and 61 (YMW16 model) pc cm-3.
-
-<p>
-  
-This research has used the Franklin and Marshall College compute cluster which was
-funded through NSF grant 1925192.
+Telescope (FAST)</a>.  The maximum expected Galactic contribution to
+the DM along the M31 line of sight is 68 (NE2001 model) and 61 (YMW16
+model) pc cm-3.  This research has used the Franklin and Marshall
+College compute cluster which was funded through NSF grant 1925192.
 
 
 <p> 
@@ -132,17 +125,12 @@ funded through NSF grant 1925192.
 
 <p>
 
-Below: (left) Image of M31 with the search region indicated by
-the green circle, and (right) the FAST telescope (image credit: Ou
-Dongqu/Xinhua/ZUMA).
-
+Below: Image of M31 with the center beam of FAST at L-band indicated
+by the circle.
 
 <p>
 
+<img height=500 src=./sky-M31-bw-rect-20pt.jpg>
 
-
-<img height=276 src=./m31_fast_bulge.jpg>
-
-<img height=256 src=./fast.jpg>
 
 
