--- a/m31_gbt/index.html
+++ b/m31_gbt/index.html
@@ -42,9 +42,9 @@ and PRESTO was used for the periodicity search.
 <a href=./candidates/>Periodicity Candidates (zmax 1200)</a> 
 
 <p>
-
 <p>
 
+<br>
 
 
 Below: (left) Optical image of M31 (credit and copyright Robert Gendler), 
@@ -55,8 +55,18 @@ and (right) the Green Bank Telescope.
 
 
 
-<img height=256 src=./m31_gendler_1080.jpg>
+<img height=300 src=./m31_gendler_1080.jpg>
 
-<img height=256 src=./gbt.jpg>
+<img height=300 src=./gbt.jpg>
+
+<p>
+
+Below: Beam coverage of M31 in two sets of observations.
+
+<br>
+
+<img height=455 src=./m31_lazio_map.jpg>
+
+<img height=455 src=./m31_saroff_map.jpg>
 
 
