--- a/m31_gbt/index.html
+++ b/m31_gbt/index.html
@@ -53,15 +53,14 @@ and (right) the Green Bank Telescope.
 
 <p>
 
+<img height=400 src=./m31_gendler_1080.jpg>
 
-
-<img height=300 src=./m31_gendler_1080.jpg>
-
-<img height=300 src=./gbt.jpg>
+<img height=400 src=./gbt.jpg>
 
 <p>
+<br>
 
-Below: Beam coverage of M31 in two sets of observations.
+Below: GBT beam coverage of M31 in two sets of observations.
 
 <br>
 
