--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -232,6 +232,8 @@ how-count="false">Follow @fandm_pulsars</a>
 <p>
 <p>
 
+<img border=1 height=240 src=./aas2026_phoenix_01.jpg>
+  
 <img border=1 height=240 src=./nanograv_mtg_fall2024.jpg>
 
 <img border=1 height=240 src=./teamleaders_april2024.jpg>
