--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -61,14 +61,13 @@ J1940+25 (MSP)</a> (PALFA pulsar discovered by Issac Lin '22 in
 September 2019)
 
 <li>
-<a href=./fandm_discoveries/S11109_1_DM71.00_ACCEL_50_ACCEL_Cand_1.pfd_XIA.png>PSR J0540-69 (LMC pulsar)</a> (PKS70
-pulsar discovered by Wenky Xia '24 in July 2023) 
+<a href=./fandm_discoveries/S11109_1_DM71.00_ACCEL_50_ACCEL_Cand_1.pfd_XIA.png>PSR
+J0540-69 (LMC pulsar)</a> (PKS70 pulsar discovered by Wenky Xia '24 in
+July 2023)
 
 </font> 
 
 </ul>
-
-
 
 
 
@@ -83,11 +82,14 @@ pulsar discovered by Wenky Xia '24 in July 2023)
 
 <p>
 
-<li> <a href=https://docs.google.com/document/d/15lrY2ae-HdLcgv3bGc9X8XMWpwpCO6rN2NyKlGmnzQM/edit?usp=sharing>NANOStars 
+<li>
+<a href=https://docs.google.com/document/d/15lrY2ae-HdLcgv3bGc9X8XMWpwpCO6rN2NyKlGmnzQM/edit?usp=sharing>NANOStars
 Program Description</a> (for new prospective students)
 
-<li> <a href=https://docs.google.com/document/d/1NgWe0y2XfBUpgvGcRiCkTWYXcmVsDjM0yyD68Zw8Coo/edit?usp=sharing>NANOStars Participation Checklist</a> (F&M 
-access only; read this to understand the steps required to participate in the program during the semester)
+<li>
+<a href=https://docs.google.com/document/d/1NgWe0y2XfBUpgvGcRiCkTWYXcmVsDjM0yyD68Zw8Coo/edit?usp=sharing>NANOStars
+Participation Checklist</a> (F&M access only; read this to understand
+the steps required to participate in the program during the semester)
 
 <li> <a href=https://about.citiprogram.org/>CITI Online RCR Training
 Registration and Training</a> (select "Log In" in the upper right
@@ -144,13 +146,13 @@ The NANOStars students at F&M are:
 <li> Adeon Muyskens '26 (team leader)
 <li> Haunah Thomas '27 (team leader)
 <li> Volkan Turan '27 (team leader)
-<li> Eleanor Craver '27
-<li> Wesley Keating '28
-<li> Maddie McMullen '28
+<li> Iman Hasnani '29
+<li> Teerth Jilka '29 
+<li> Seth Kauffman '28
 <li> Sayf Mullick '28
+<li> Truc Phan '29
+<li> Ethan Sauder '28 
 
-
-  
 <p>
 
 </ul>
@@ -176,7 +178,8 @@ The NANOStars program uses data from the following radio telescopes:
 <li> <a href=https://greenbankobservatory.org/science/telescopes/gbt/>The Green
 Bank 100-m Telescope (GBT)</a>
 
-  <li> <a href=https://www.parkes.atnf.csiro.au/>The Parkes 64-m Radio Telescope</a>
+<li> <a href=https://www.parkes.atnf.csiro.au/>The Parkes 64-m Radio Telescope</a>
+
 </ul>
 
 
@@ -195,7 +198,7 @@ plan upcoming data analysis tasks.
 
 <ul>
 
-<li> <b>Internal F&M Team Meetings for Fall 2025:</b> 
+<li> <b>Internal F&M Team Meetings for Spring 2026:</b> 
 
 <p>
 
@@ -205,14 +208,14 @@ Fridays 4:30-5:30 p.m. in Hackman 220
 <p>
 
 
-<li> <b>NANOStars Telecons for Fall 2025:</b> 
+<li> <b>NANOStars Telecons for Spring 2026:</b> 
 
 <p>
 
-Fri Sep 26 at 4:30 p.m. ET <br>
-Fri Oct 17 at 4:30 p.m. ET <br>
-Fri Nov 14 at 4:30 p.m. ET <br>
-Fri Dec 5  at 4:30 p.m. ET
+Fri Jan 30 at 4:30 p.m. ET <br>
+Fri Feb 27 at 4:30 p.m. ET <br>
+Fri Mar 27 at 4:30 p.m. ET <br>
+Fri Apr 17 at 4:30 p.m. ET
 
 </ul>
 
