--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -146,13 +146,17 @@ The NANOStars students at F&M are:
 <li> Adeon Muyskens '26 (team leader)
 <li> Haunah Thomas '27 (team leader)
 <li> Volkan Turan '27 (team leader)
+<li> Nalunga Di Domenico '29  
 <li> Iman Hasnani '29
-<li> Teerth Jilka '29 
 <li> Seth Kauffman '28
+<li> Maddy McMullen '28
 <li> Sayf Mullick '28
+<li> Nicole Parraway '28
 <li> Truc Phan '29
 <li> Ethan Sauder '28 
+<li> Markella Tarnana '29
 
+  
 <p>
 
 </ul>
