--- a/m33/index.html
+++ b/m33/index.html
@@ -110,5 +110,5 @@ M33 with survey beams overlaid.
 
 <img height=512 src=./m33_rot.jpg>
 
-<img height=512 src=./m33_skyview.png>
+<img height=512 src=./m33_map.PUPPI.jpg>
 
