--- a/nanostars/index.html
+++ b/nanostars/index.html
@@ -149,6 +149,7 @@ The NANOStars students at F&M are:
 <li> Nalunga Di Domenico '29  
 <li> Iman Hasnani '29
 <li> Seth Kauffman '27
+<li> Jacob Macchi '27
 <li> Maddy McMullen '28
 <li> Sayf Mullick '28
 <li> Nicole Parraway '28
